--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -26,6 +26,13 @@
         android:text="@string/server" >
     </Button>
 
+    <Button
+        android:id="@+id/call"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/call" >
+   </Button>
+
     <ListView
         android:id="@+id/listView1"
         android:layout_width="match_parent"
